tests/sumo/errors/begin_negative/errors.sumo
Error: The begin time should not be negative.
Quitting (on error).
